cmake_minimum_required(VERSION 3.13)
project(arithmetic_base C)
#添加自定义的header
include_directories(header)
#依次设置头文件目录、库目录、要链接的库
#set(INC_DIR /Users/haoran/Downloads/wfdb/include)
#set(LINK_DIR /Users/haoran/Downloads/wfdb/lib)
#include_directories(${INC_DIR})
#link_directories(${LINK_DIR})
#link_libraries(wfdb)
set(CMAKE_C_STANDARD 99)

add_executable(arithmetic_base main.c header/Bubble.h Bubble.c)
add_executable(arithmetic_base_2 src/com/wqj/c/array/array.c)
add_executable(arithmetic_base_3 src/com/wqj/c/sort/selectSort.c)
add_executable(arithmetic_base_4 src/com/wqj/c/sort/BubbleSort.c)
add_executable(arithmetic_base_5 src/com/wqj/c/array/TwoDimensionArray.c)
add_executable(arithmetic_base_6 src/com/wqj/c/operatefile/operate.c)
add_executable(arithmetic_base_7 src/com/wqj/c/pointer/operatePointer.c)
add_executable(arithmetic_base_8 src/com/wqj/c/pointer/OperateTwoDim.c)
add_executable(arithmetic_base_9 src/com/wqj/c/pointer/OperateMatrix.c)
add_executable(arithmetic_base_10 src/com/wqj/c/struct/StructDate.c)
add_executable(arithmetic_base_11 src/com/wqj/c/struct/UnionBody.c)
add_executable(arithmetic_base_12 src/com/wqj/c/operatefile/OperateFile.c)
add_executable(arithmetic_base_13 src/com/wqj/c/operatefile/OperateFile2.c)
add_executable(arithmetic_base_14 src/com/wqj/c/operatebit/BinaryOpertor.c)

add_executable(arithmetic_base_15 src/com/wqj/ds/basemath/LargestCommonDivisor.c)
add_executable(arithmetic_base_16 src/com/wqj/ds/linertable/OperateLiner.c)
add_executable(arithmetic_base_17 src/com/wqj/ds/linertable/OperateLinkList.c)
add_executable(arithmetic_base_18 src/com/wqj/c/test/TestC.c)
add_executable(arithmetic_base_19 src/com/wqj/ds/linertable/OperateDuplexingLinkList.c)
add_executable(arithmetic_base_20 src/com/wqj/ds/linertable/OperateDuplexingLinkList.c)
